Prevent text wrap in site title

--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -44,6 +44,11 @@ p {
     justify-content: space-between;
     align-items: center;
   }
+
+  .site-header__title {
+    flex-shrink: 0;
+    margin-right: 1em;
+  }
 }
 
 /*
